--- a/2026/janeiro/05.ipynb
+++ b/2026/janeiro/05.ipynb
@@ -203,6 +203,64 @@
    "cell_type": "markdown",
    "id": "d7e3a297",
    "metadata": {},
+   "source": [
+    "<link href=\"https://fonts.googleapis.com/css2?family=Allison&display=swap\" rel=\"stylesheet\">\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Allison', cursive;\n",
+    "  font-size: 26px;\n",
+    "  line-height: 1.5;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
+    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia\n",
+    "e pressão.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6038e0bb",
+   "metadata": {},
+   "source": [
+    "<link href=\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap\" rel=\"stylesheet\">\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Reenie Beanie', cursive;\n",
+    "  font-size: 22px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
+    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia,\n",
+    "pressão e velocidade do fluido. A conservação local dessas quantidades reflete,\n",
+    "de maneira efetiva, a física microscópica do sistema.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c346ce3f",
+   "metadata": {},
+   "source": [
+    "<link href=\"https://fonts.googleapis.com/css2?family=Allison&display=swap\" rel=\"stylesheet\">\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Allison', cursive;\n",
+    "  font-size: 26px;\n",
+    "  line-height: 1.5;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
+    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia\n",
+    "e pressão.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6be5279",
+   "metadata": {},
    "source": []
   }
  ],
