--- a/2026/janeiro/05.ipynb
+++ b/2026/janeiro/05.ipynb
@@ -2,6 +2,105 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c339fb30",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "da31be8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/* 1) Importa as fontes (troca aqui quando quiser) */\n",
+       "@import url(\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Allison&family=Square+Peg&display=swap\");\n",
+       "\n",
+       "/* 2) “Parâmetros” globais */\n",
+       ":root {\n",
+       "    --font-body: \"Homemade Apple\", cursive;\n",
+       "    /* texto principal */\n",
+       "    --font-title: \"Allison\", cursive;\n",
+       "    /* títulos */\n",
+       "    --font-note: \"Square Peg\", cursive;\n",
+       "    /* comentários/rabiscos */\n",
+       "\n",
+       "    --text-size: 20px;\n",
+       "    --title-size: 34px;\n",
+       "    --line: 1.65;\n",
+       "\n",
+       "    --ink: #1f2a37;\n",
+       "    /* cor do texto */\n",
+       "    --paper: #fbfbf8;\n",
+       "    /* fundo */\n",
+       "}\n",
+       "\n",
+       "/* 3) Classes que você usa nos notebooks */\n",
+       ".nb-body {\n",
+       "    font-family: var(--font-body);\n",
+       "    font-size: var(--text-size);\n",
+       "    line-height: var(--line);\n",
+       "    color: var(--ink);\n",
+       "}\n",
+       "\n",
+       ".nb-title {\n",
+       "    font-family: var(--font-title);\n",
+       "    font-size: var(--title-size);\n",
+       "}\n",
+       "\n",
+       ".nb-note {\n",
+       "    font-family: var(--font-note);\n",
+       "    opacity: .9;\n",
+       "}\n",
+       "\n",
+       ".nb-body {\n",
+       "    color: red !important;\n",
+       "}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "css = Path(\"../../assets/css/notebook-theme.css\").read_text(encoding=\"utf-8\")\n",
+    "HTML(f\"<style>{css}</style>\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b9b9a5b",
+   "metadata": {},
+   "source": [
+    "<div class=\"nb-body\">\n",
+    "\n",
+    "Em fluidos relativísticos, a dinâmica macroscópica é descrita pela conservação do tensor energia-momento,\n",
+    "$$\n",
+    "\\partial_\\mu T^{\\mu\\nu} = 0,\n",
+    "$$\n",
+    "onde\n",
+    "$$\n",
+    "T^{\\mu\\nu} = (\\varepsilon + p) u^\\mu u^\\nu - p\\, g^{\\mu\\nu} + \\pi^{\\mu\\nu}.\n",
+    "$$\n",
+    "Aqui, $\\varepsilon$ é a densidade de energia no referencial local do fluido, $p$ a pressão,\n",
+    "$u^\\mu$ o quadrivetor velocidade normalizado por $u^\\mu u_\\mu = 1$,\n",
+    "e $\\pi^{\\mu\\nu}$ representa correções dissipativas associadas à viscosidade de cisalhamento e volume.\n",
+    "No regime ideal, $\\pi^{\\mu\\nu} = 0$, enquanto teorias hidrodinâmicas de segunda ordem\n",
+    "introduzem equações de relaxação para garantir causalidade e estabilidade.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6742bf9e",
    "metadata": {},
    "source": [
@@ -123,66 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35af77cf",
-   "metadata": {},
-   "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap\" rel=\"stylesheet\">\n",
-    "\n",
-    "<div style=\"\n",
-    "  font-family: 'Homemade Apple', cursive;\n",
-    "  font-size: 19px;\n",
-    "  line-height: 1.7;\n",
-    "  color: #2c2c2c;\n",
-    "\">\n",
-    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
-    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia,\n",
-    "pressão e velocidade do fluido. A conservação local dessas quantidades codifica,\n",
-    "de forma efetiva, a dinâmica microscópica subjacente.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4993ee25",
-   "metadata": {},
-   "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap\" rel=\"stylesheet\">\n",
-    "\n",
-    "<div style=\"\n",
-    "  font-family: 'Reenie Beanie', cursive;\n",
-    "  font-size: 22px;\n",
-    "  line-height: 1.6;\n",
-    "  color: #2c2c2c;\n",
-    "\">\n",
-    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
-    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia,\n",
-    "pressão e velocidade do fluido. A conservação local dessas quantidades reflete,\n",
-    "de maneira efetiva, a física microscópica do sistema.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "738d1c1d",
-   "metadata": {},
-   "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Allison&display=swap\" rel=\"stylesheet\">\n",
-    "\n",
-    "<div style=\"\n",
-    "  font-family: 'Allison', cursive;\n",
-    "  font-size: 26px;\n",
-    "  line-height: 1.5;\n",
-    "  color: #2c2c2c;\n",
-    "\">\n",
-    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
-    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia\n",
-    "e pressão.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e2ef01c",
+   "id": "904d7981",
    "metadata": {},
    "source": [
     "<link href=\"https://fonts.googleapis.com/css2?family=Square+Peg&display=swap\" rel=\"stylesheet\">\n",
@@ -201,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e3a297",
+   "id": "cf62135f",
    "metadata": {},
    "source": [
     "<link href=\"https://fonts.googleapis.com/css2?family=Allison&display=swap\" rel=\"stylesheet\">\n",
@@ -220,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6038e0bb",
+   "id": "80c7a872",
    "metadata": {},
    "source": [
     "<link href=\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap\" rel=\"stylesheet\">\n",
@@ -240,26 +280,188 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c346ce3f",
+   "id": "7af781c6",
    "metadata": {},
    "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Allison&display=swap\" rel=\"stylesheet\">\n",
+    "<link href=\"https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap\" rel=\"stylesheet\">\n",
     "\n",
     "<div style=\"\n",
-    "  font-family: 'Allison', cursive;\n",
-    "  font-size: 26px;\n",
-    "  line-height: 1.5;\n",
+    "  font-family: 'Patrick Hand', cursive;\n",
+    "  font-size: 20px;\n",
+    "  line-height: 1.6;\n",
     "  color: #2c2c2c;\n",
     "\">\n",
-    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
-    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia\n",
-    "e pressão.\n",
+    "\n",
+    "Partimos da conservação local do tensor energia–momento,\n",
+    "que pode ser escrita como\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "$$\n",
+    "\\partial_\\mu T^{\\mu\\nu} = 0.\n",
+    "$$\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Patrick Hand', cursive;\n",
+    "  font-size: 20px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "\n",
+    "Para um fluido ideal relativístico, o tensor energia–momento é dado por\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "$$\n",
+    "T^{\\mu\\nu} = (\\varepsilon + p) u^\\mu u^\\nu - p\\, g^{\\mu\\nu}.\n",
+    "$$\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Patrick Hand', cursive;\n",
+    "  font-size: 20px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "\n",
+    "Projetando a equação de conservação ao longo do quadrivetor velocidade,\n",
+    "obtém-se a equação de conservação de energia,\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "$$\n",
+    "u_\\nu \\partial_\\mu T^{\\mu\\nu}\n",
+    "= u^\\mu \\partial_\\mu \\varepsilon\n",
+    "+ (\\varepsilon + p)\\, \\partial_\\mu u^\\mu = 0.\n",
+    "$$\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Patrick Hand', cursive;\n",
+    "  font-size: 20px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "\n",
+    "No referencial local do fluido, essa equação assume uma forma particularmente\n",
+    "intuitiva: a variação temporal da densidade de energia é governada pela expansão\n",
+    "do fluido, codificada no divergente do campo de velocidades.\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "$$\n",
+    "\\frac{d\\varepsilon}{d\\tau}\n",
+    "= -(\\varepsilon + p)\\, \\nabla_\\mu u^\\mu.\n",
+    "$$\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Patrick Hand', cursive;\n",
+    "  font-size: 20px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "\n",
+    "Em situações com simetria adequada, como expansão longitudinal unidimensional,\n",
+    "essa equação pode ser integrada explicitamente, fornecendo a dependência\n",
+    "da densidade de energia com o tempo próprio do fluido.\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "$$\n",
+    "\\varepsilon(\\tau)\n",
+    "= \\varepsilon_0\n",
+    "\\exp\\!\\left(\n",
+    "-\\int_{\\tau_0}^{\\tau}\n",
+    "(\\varepsilon + p)\\, \\nabla_\\mu u^\\mu \\, d\\tau'\n",
+    "\\right).\n",
+    "$$\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Patrick Hand', cursive;\n",
+    "  font-size: 20px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "\n",
+    "Essa forma deixa claro como a hidrodinâmica relativística traduz,\n",
+    "em linguagem macroscópica, a dinâmica microscópica do sistema.\n",
+    "\n",
     "</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a6be5279",
+   "id": "d1e87a55",
+   "metadata": {},
+   "source": [
+    "<link href=\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap\" rel=\"stylesheet\">\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Reenie Beanie', cursive;\n",
+    "  font-size: 22px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "\n",
+    "Em fluidos relativísticos, partimos da conservação local do tensor energia–momento,\n",
+    "expressa pela equação fundamental\n",
+    "$$\n",
+    "\\partial_\\mu T^{\\mu\\nu} = 0.\n",
+    "$$\n",
+    "\n",
+    "Para um fluido ideal, o tensor energia–momento assume a forma\n",
+    "$$\n",
+    "T^{\\mu\\nu} = (\\varepsilon + p)\\, u^\\mu u^\\nu - p\\, g^{\\mu\\nu},\n",
+    "$$\n",
+    "onde $\\varepsilon$ é a densidade de energia, $p$ a pressão e $u^\\mu$ o quadrivetor\n",
+    "velocidade, normalizado por $u^\\mu u_\\mu = 1$.\n",
+    "\n",
+    "Projetando a equação de conservação ao longo de $u_\\nu$, obtemos\n",
+    "$$\n",
+    "u_\\nu \\partial_\\mu T^{\\mu\\nu}\n",
+    "= u^\\mu \\partial_\\mu \\varepsilon\n",
+    "+ (\\varepsilon + p)\\, \\partial_\\mu u^\\mu = 0.\n",
+    "$$\n",
+    "\n",
+    "Definindo a derivada convectiva ao longo da linha de mundo do fluido como\n",
+    "$d/d\\tau = u^\\mu \\partial_\\mu$, a equação acima pode ser reescrita como\n",
+    "$$\n",
+    "\\frac{d\\varepsilon}{d\\tau}\n",
+    "= -(\\varepsilon + p)\\, \\nabla_\\mu u^\\mu.\n",
+    "$$\n",
+    "\n",
+    "Em uma expansão longitudinal simples, como no caso de Bjorken,\n",
+    "o divergente do campo de velocidades é dado por $\\nabla_\\mu u^\\mu = 1/\\tau$,\n",
+    "de modo que a equação de conservação de energia se reduz a\n",
+    "$$\n",
+    "\\frac{d\\varepsilon}{d\\tau}\n",
+    "= -\\frac{\\varepsilon + p}{\\tau}.\n",
+    "$$\n",
+    "\n",
+    "Assumindo uma equação de estado do tipo $p = c_s^2\\, \\varepsilon$,\n",
+    "essa equação diferencial pode ser integrada diretamente,\n",
+    "$$\n",
+    "\\int_{\\varepsilon_0}^{\\varepsilon(\\tau)}\n",
+    "\\frac{d\\varepsilon'}{\\varepsilon' (1 + c_s^2)}\n",
+    "=\n",
+    "-\\int_{\\tau_0}^{\\tau} \\frac{d\\tau'}{\\tau'}.\n",
+    "$$\n",
+    "\n",
+    "O resultado da integração fornece a dependência explícita da densidade de energia\n",
+    "com o tempo próprio,\n",
+    "$$\n",
+    "\\varepsilon(\\tau)\n",
+    "= \\varepsilon_0\n",
+    "\\left( \\frac{\\tau_0}{\\tau} \\right)^{1 + c_s^2}.\n",
+    "$$\n",
+    "\n",
+    "Essa expressão deixa claro como a expansão do fluido governa o resfriamento\n",
+    "do sistema em hidrodinâmica relativística.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1900b114",
    "metadata": {},
    "source": []
   }
