--- a/teste_estilo/note.ipynb
+++ b/teste_estilo/note.ipynb
@@ -113,6 +113,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8922e9a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from IPython.display import HTML, display\n",
+    "\n",
+    "def render_markers(md):\n",
+    "    html = re.sub(r'==(.+?)==', r'<mark>\\1</mark>', md)\n",
+    "    display(HTML(html))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87ea2da4",
+   "metadata": {},
+   "source": [
+    "Este é um texto normal, mas\n",
+    "<mark>esta frase está marcada como marcador</mark>\n",
+    "e o texto continua normalmente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "123cd849",
+   "metadata": {},
+   "source": [
+    "==esta frase está marcada=="
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "178cb315",
    "metadata": {},
