--- a/teste_estilo/note.ipynb
+++ b/teste_estilo/note.ipynb
@@ -1,6 +1,116 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c19962dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/* Alvo bem específico do Jupyter, + fallback */\n",
+       ".jp-RenderedHTMLCommon mark.mk,\n",
+       ".jp-RenderedHTMLCommon mark.mk1,\n",
+       ".jp-RenderedHTMLCommon mark.mk2,\n",
+       ".jp-RenderedHTMLCommon mark.mk3,\n",
+       ".text_cell_render mark.mk,\n",
+       ".text_cell_render mark.mk1,\n",
+       ".text_cell_render mark.mk2,\n",
+       ".text_cell_render mark.mk3 {\n",
+       "    padding: 0 .18em !important;\n",
+       "    border-radius: .18em !important;\n",
+       "    box-decoration-break: clone;\n",
+       "    -webkit-box-decoration-break: clone;\n",
+       "}\n",
+       "\n",
+       "/* Variações */\n",
+       ".jp-RenderedHTMLCommon mark.mk,\n",
+       ".text_cell_render mark.mk {\n",
+       "    background: #fff59d !important;\n",
+       "    /* amarelo marcador */\n",
+       "}\n",
+       "\n",
+       ".jp-RenderedHTMLCommon mark.mk1,\n",
+       ".text_cell_render mark.mk1 {\n",
+       "    background: #b3e5fc !important;\n",
+       "    /* azul “ideia” */\n",
+       "}\n",
+       "\n",
+       ".jp-RenderedHTMLCommon mark.mk2,\n",
+       ".text_cell_render mark.mk2 {\n",
+       "    background: #c8e6c9 !important;\n",
+       "    /* verde “ok” */\n",
+       "}\n",
+       "\n",
+       ".jp-RenderedHTMLCommon mark.mk3,\n",
+       ".text_cell_render mark.mk3 {\n",
+       "    background: #ffcdd2 !important;\n",
+       "    /* rosa “atenção” */\n",
+       "}\n",
+       "\n",
+       "/* só markdown cells */\n",
+       ".text_cell .rendered_html {\n",
+       "    font-family: var(--nb-font) !important;\n",
+       "}\n",
+       "\n",
+       "/* só código */\n",
+       ".code_cell .input_area {\n",
+       "    border-radius: 14px;\n",
+       "}\n",
+       "\n",
+       ".rendered_html .box {\n",
+       "    padding: 12px 16px;\n",
+       "    border-radius: 14px;\n",
+       "    margin: 12px 0;\n",
+       "}\n",
+       "\n",
+       ".rendered_html .box.def {\n",
+       "    background: #c8e6c9;\n",
+       "}\n",
+       "\n",
+       ".rendered_html .box.att {\n",
+       "    background: #ffcdd2;\n",
+       "}\n",
+       "\n",
+       ".text_cell {\n",
+       "    position: relative;\n",
+       "}\n",
+       "\n",
+       ".text_cell.note {\n",
+       "    background: #f6fff8;\n",
+       "    border-radius: 18px;\n",
+       "    padding: 18px 22px 18px 28px;\n",
+       "    margin: 16px 0;\n",
+       "}\n",
+       "\n",
+       ".text_cell.note::before {\n",
+       "    content: \"\";\n",
+       "    position: absolute;\n",
+       "    left: 0;\n",
+       "    top: 14px;\n",
+       "    bottom: 14px;\n",
+       "    width: 6px;\n",
+       "    background: #2ecc71;\n",
+       "    border-radius: 6px;\n",
+       "}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "from IPython.display import HTML\n",
+    "HTML(\"<style>\" + Path(\"theme.css\").read_text(encoding=\"utf-8\") + \"</style>\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "545b66e5",
    "metadata": {},
@@ -37,102 +147,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7e20c53a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>:root {\n",
-       "    --nb-font: \"Reenie Beanie\", cursive;\n",
-       "    --nb-size: 22px;\n",
-       "    --nb-line: 1.6;\n",
-       "    --nb-ink: #2c2c2c;\n",
-       "    --nb-paper: #fffbe6;\n",
-       "}\n",
-       "\n",
-       "/* fundo da página (opcional) */\n",
-       "body {\n",
-       "    background: var(--nb-paper);\n",
-       "}\n",
-       "\n",
-       "/* 🔑 TEXTO DO NOTEBOOK (alvo correto) */\n",
-       ".jp-RenderedHTMLCommon,\n",
-       ".jp-RenderedHTMLCommon p,\n",
-       ".jp-RenderedHTMLCommon li,\n",
-       ".jp-RenderedHTMLCommon div,\n",
-       ".jp-RenderedHTMLCommon span,\n",
-       ".jp-RenderedHTMLCommon h1,\n",
-       ".jp-RenderedHTMLCommon h2,\n",
-       ".jp-RenderedHTMLCommon h3,\n",
-       ".jp-RenderedHTMLCommon h4 {\n",
-       "    font-family: var(--nb-font) !important;\n",
-       "    font-size: var(--nb-size) !important;\n",
-       "    line-height: var(--nb-line) !important;\n",
-       "    color: var(--nb-ink) !important;\n",
-       "}\n",
-       "\n",
-       "/* títulos um pouco maiores (opcional) */\n",
-       ".jp-RenderedHTMLCommon h1 {\n",
-       "    font-size: 40px !important;\n",
-       "}\n",
-       "\n",
-       ".jp-RenderedHTMLCommon h2 {\n",
-       "    font-size: 32px !important;\n",
-       "}\n",
-       "\n",
-       ".jp-RenderedHTMLCommon h3 {\n",
-       "    font-size: 26px !important;\n",
-       "}\n",
-       "\n",
-       "/* ❌ NÃO toque no MathJax */\n",
-       "\n",
-       "/* efeito marcador de texto */\n",
-       "\n",
-       ".marker {\n",
-       "    background: linear-gradient(transparent 60%, rgba(255, 5, 59, .75) 60%);\n",
-       "    padding: 0.05em 0.2em;\n",
-       "    border-radius: 0.15em;\n",
-       "}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "from IPython.display import HTML\n",
-    "HTML(\"<style>\" + Path(\"theme.css\").read_text(encoding=\"utf-8\") + \"</style>\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "8922e9a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "from IPython.display import HTML, display\n",
-    "\n",
-    "def render_markers(md):\n",
-    "    html = re.sub(r'==(.+?)==', r'<mark>\\1</mark>', md)\n",
-    "    display(HTML(html))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "87ea2da4",
    "metadata": {},
    "source": [
-    "Este é um texto normal, mas <span class=\"marker\">marcador</span> e o texto continua normalmente."
+    "Este é um texto normal, mas <mark>marcador</mark> e o texto continua normalmente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c598fbd8",
+   "metadata": {},
+   "source": [
+    "Este é um texto normal, mas <mark>marcador</mark> e o texto continua normalmente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8687cd8f",
+   "metadata": {},
+   "source": [
+    "<p>\n",
+    "A descrição hidrodinâmica emerge quando os graus de liberdade microscópicos\n",
+    "são efetivamente integrados, resultando em uma dinâmica governada por quantidades\n",
+    "coletivas. Nesse sentido, <mark class=\"mk\">o campo hidrodinâmico já é um objeto coarse-grained</mark>,\n",
+    "e não uma variável fundamental da teoria subjacente.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "<mark class=\"mk-def\">Definição.</mark>\n",
+    "Chamamos de expansão longitudinal simples o regime no qual o divergente do\n",
+    "campo de velocidades satisfaz ∇<sub>μ</sub>u<sup>μ</sup> = 1/τ, como no cenário de Bjorken.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "Esse resultado implica que a evolução temporal da densidade de energia\n",
+    "é diretamente controlada pela expansão do fluido, levando ao resfriamento\n",
+    "do sistema. <mark class=\"mk-insight\">A hidrodinâmica codifica, portanto, um tipo de coarse-graining temporal</mark>,\n",
+    "no qual detalhes microscópicos são continuamente esquecidos à medida que o tempo\n",
+    "próprio evolui.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "<mark class=\"mk-warn\">Atenção.</mark>\n",
+    "Essa descrição é válida apenas enquanto hipóteses como equilíbrio local e\n",
+    "gradientes pequenos permanecem consistentes. Fora desse regime, correções\n",
+    "não hidrodinâmicas tornam-se relevantes.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "Sob essa perspectiva, a hidrodinâmica relativística pode ser interpretada\n",
+    "não apenas como uma teoria efetiva, mas como uma linguagem natural para\n",
+    "descrever a irreversibilidade emergente em sistemas quânticos de muitos corpos.\n",
+    "</p>"
    ]
   },
   {
@@ -184,6 +251,140 @@
   {
    "cell_type": "markdown",
    "id": "fdfa5baf",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abee1647",
+   "metadata": {},
+   "source": [
+    "Este é um texto normal, mas <mark>marcador</mark> e o texto continua normalmente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e38cf6b5",
+   "metadata": {},
+   "source": [
+    "uma celula\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a67f439",
+   "metadata": {},
+   "source": [
+    "outra celula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d13336a",
+   "metadata": {},
+   "source": [
+    "Este é um texto normal, mas <mark>marcador</mark> e o texto continua normalmente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70f70fa5",
+   "metadata": {},
+   "source": [
+    "Este é um texto normal, mas <mark>marcador</mark> e o texto continua normalmente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5a00816",
+   "metadata": {},
+   "source": [
+    "Este é um texto normal, mas <mark class=\"mk\">essa frase está marcada como marcador</mark> e o texto continua.\n",
+    "\n",
+    "<mark class=\"mk1\">Ideia</mark> — <mark class=\"mk2\">Ok</mark> — <mark class=\"mk3\">Atenção</mark>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16a76755",
+   "metadata": {},
+   "source": [
+    "celula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2110ab14",
+   "metadata": {},
+   "source": [
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0add561f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0e7d712",
+   "metadata": {},
+   "source": [
+    "<div class=\"box def\">\n",
+    "**Definição.** Chamamos de expansão longitudinal…\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"box att\">\n",
+    "**Atenção.** Essa aproximação falha quando…\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa589a0c",
+   "metadata": {},
+   "source": [
+    "<div class=\"cell text_cell\">\n",
+    "  <div class=\"inner_cell\">\n",
+    "    <div class=\"text_cell_render rendered_html\">\n",
+    "      <p>Texto aqui</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5611ca76",
+   "metadata": {},
+   "source": [
+    "<div class=\"cell-note\">\n",
+    "Este é um insight importante sobre hidrodinâmica relativística.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65246721",
+   "metadata": {},
+   "source": [
+    "<div class=\"doc\">\n",
+    "\n",
+    "Texto normal.\n",
+    "\n",
+    "<mark class=\"mk\">marcado</mark>\n",
+    "\n",
+    "<div class=\"note\">\n",
+    "Nota importante.\n",
+    "</div>\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "343bc789",
    "metadata": {},
    "source": []
   }
