--- a/teste_estilo/teste.ipynb
+++ b/teste_estilo/teste.ipynb
@@ -89,6 +89,20 @@
    "cell_type": "markdown",
    "id": "6492ce9e",
    "metadata": {},
+   "source": [
+    "<div class=\"cell text_cell\">\n",
+    "  <div class=\"inner_cell\">\n",
+    "    <div class=\"text_cell_render rendered_html\">\n",
+    "      <p>Texto aqui</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae0d8587",
+   "metadata": {},
    "source": []
   }
  ],
