--- a/2026/janeiro/09.ipynb
+++ b/2026/janeiro/09.ipynb
@@ -16,9 +16,11 @@
    "id": "bd31eda5",
    "metadata": {},
    "source": [
-    "### Instalação das bibliotecas GPML e ambiente jupyter com kernel Matlab\n",
+    "### Instalação das seguintes bibliotecas e instalação do ambiente jupyter com kernel Matlab e Python\n",
     "\n",
-    "- [GPML](https://gaussianprocess.org/gpml/code/matlab/doc/manual.pdf)"
+    "- [GPML](https://gaussianprocess.org/gpml/code/matlab/doc/manual.pdf)\n",
+    "- [GPFLOW](https://gpflow.org)\n",
+    "- [GPyTorch](https://gpytorch.ai)"
    ]
   },
   {
