--- a/2026/janeiro/10.ipynb
+++ b/2026/janeiro/10.ipynb
@@ -68,6 +68,30 @@
    "cell_type": "markdown",
    "id": "41d1fbdd",
    "metadata": {},
+   "source": [
+    "[Gaussian Process Regression From First Principles](https://towardsdatascience.com/gaussian-process-regression-from-first-principles-833f4aa5f842/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "913e4dbd",
+   "metadata": {},
+   "source": [
+    "[Batched, Multi-Dimensional Gaussian Process Regression with GPyTorch](https://towardsdatascience.com/batched-multi-dimensional-gaussian-process-regression-with-gpytorch-3a6425185109/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "666f1860",
+   "metadata": {},
+   "source": [
+    "[Modern Gaussian Process Regression](https://towardsdatascience.com/modern-gaussian-process-regression-9c5196ca87ab/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "312116c8",
+   "metadata": {},
    "source": []
   }
  ],
