--- a/2026/janeiro/12.ipynb
+++ b/2026/janeiro/12.ipynb
@@ -2,12 +2,189 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6eacf08d",
+   "id": "b682d5cb",
+   "metadata": {},
+   "source": [
+    "<link href=\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap\" rel=\"stylesheet\">\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Reenie Beanie', cursive;\n",
+    "  font-size: 24px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "\n",
+    "\n",
+    "## Origem cinemática da expansão em harmônicos $ v_n $\n",
+    "\n",
+    "**Analisando apenas a cinemática**, após o *freeze-out* temos um **conjunto de partículas detectadas**. Nesse estágio, o sistema já não evolui dinamicamente: não há forças, nem equações de movimento, apenas um estado final congelado acessível experimentalmente.\n",
+    "\n",
+    "Fixando o momento transversal $ p_T $, podemos medir a distribuição angular\n",
+    "\n",
+    "$$\n",
+    "\\frac{dN}{d\\phi}(p_T),\n",
+    "$$\n",
+    "\n",
+    "que representa o **número de partículas com momento transversal $ p_T $** emitidas na **direção azimutal $ \\phi $**.\n",
+    "\n",
+    "A variável $ \\phi $ é um ângulo, portanto satisfaz a identificação geométrica\n",
+    "\n",
+    "$$\n",
+    "\\phi \\equiv \\phi + 2\\pi.\n",
+    "$$\n",
+    "\n",
+    "Segue que a função $ \\frac{dN}{d\\phi}(p_T) $ é uma **função periódica de período $ 2\\pi $**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Expansão em série de Fourier\n",
+    "\n",
+    "Toda função periódica definida em um círculo pode ser expandida em **série de Fourier**. Assim, **necessariamente existe** uma expansão do tipo\n",
+    "\n",
+    "$$\n",
+    "\\frac{dN}{d\\phi}(p_T)\n",
+    "=\n",
+    "a_0(p_T)\n",
+    "+\n",
+    "\\sum_{n=1}^{\\infty}\n",
+    "\\left[\n",
+    "a_n(p_T)\\cos(n\\phi)\n",
+    "+\n",
+    "b_n(p_T)\\sin(n\\phi)\n",
+    "\\right].\n",
+    "$$\n",
+    "\n",
+    "Essa expansão é um **resultado puramente matemático**, decorrente apenas da periodicidade da variável angular $ \\phi $.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Escolha de um ângulo de referência\n",
+    "\n",
+    "Em cada evento, escolhe-se um **ângulo de referência** $ \\Psi_n $, correspondente a uma **rotação global no plano transversal**. Essa escolha é cinemática e não altera a distribuição física, apenas redefine o eixo angular.\n",
+    "\n",
+    "Com essa rotação, o par de coeficientes trigonométricos pode ser reescrito como\n",
+    "\n",
+    "$$\n",
+    "a_n(p_T)\\cos(n\\phi) + b_n(p_T)\\sin(n\\phi)\n",
+    "=\n",
+    "A_n(p_T)\\cos\\big(n(\\phi - \\Psi_n)\\big),\n",
+    "$$\n",
+    "\n",
+    "onde $ A_n(p_T) $ e $ \\Psi_n $ são **apenas reparametrizações trigonométricas**, sem novo conteúdo físico.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Normalização da distribuição\n",
+    "\n",
+    "Define-se o número total de partículas naquele momento transversal $ p_T $ como\n",
+    "\n",
+    "$$\n",
+    "N(p_T)\n",
+    "=\n",
+    "\\int_0^{2\\pi}\n",
+    "d\\phi\\,\n",
+    "\\frac{dN}{d\\phi}(p_T).\n",
+    "$$\n",
+    "\n",
+    "O termo médio da série de Fourier é então dado por\n",
+    "\n",
+    "$$\n",
+    "a_0(p_T)\n",
+    "=\n",
+    "\\frac{N(p_T)}{2\\pi}.\n",
+    "$$\n",
+    "\n",
+    "Essa definição garante que a distribuição angular esteja **corretamente normalizada**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Definição dos coeficientes $ v_n $\n",
+    "\n",
+    "Por convenção, definem-se os coeficientes harmônicos como\n",
+    "\n",
+    "$$\n",
+    "v_n(p_T)\n",
+    "\\equiv\n",
+    "\\left\\langle\n",
+    "\\cos\\big(n(\\phi - \\Psi_n)\\big)\n",
+    "\\right\\rangle,\n",
+    "$$\n",
+    "\n",
+    "ou, de forma explícita,\n",
+    "\n",
+    "$$\n",
+    "v_n(p_T)\n",
+    "=\n",
+    "\\frac{\n",
+    "\\int_0^{2\\pi}\n",
+    "d\\phi\\,\n",
+    "\\cos\\big(n(\\phi - \\Psi_n)\\big)\\,\n",
+    "\\frac{dN}{d\\phi}(p_T)\n",
+    "}{\n",
+    "\\int_0^{2\\pi}\n",
+    "d\\phi\\,\n",
+    "\\frac{dN}{d\\phi}(p_T)\n",
+    "}.\n",
+    "$$\n",
+    "\n",
+    "Esses coeficientes correspondem a **projeções da distribuição angular** sobre a base harmônica natural do círculo.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Forma final da expansão\n",
+    "\n",
+    "Substituindo todas as definições anteriores, obtém-se a forma final da expansão:\n",
+    "\n",
+    "$$\n",
+    "\\frac{dN}{d\\phi}(p_T)\n",
+    "=\n",
+    "\\frac{N(p_T)}{2\\pi}\n",
+    "\\left[\n",
+    "1\n",
+    "+\n",
+    "2\n",
+    "\\sum_{n=1}^{\\infty}\n",
+    "v_n(p_T)\n",
+    "\\cos\\big(n(\\phi - \\Psi_n)\\big)\n",
+    "\\right].\n",
+    "$$\n",
+    "\n",
+    "Essa expressão é **cinemática, estatística e geométrica**, não envolvendo qualquer equação de movimento.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### O modo isotrópico $ v_0 $\n",
+    "\n",
+    "Podemos, então, identificar o **modo harmônico de ordem zero** como o termo médio da expansão. O coeficiente correspondente é\n",
+    "\n",
+    "$$\n",
+    "v_0(p_T)\n",
+    "\\equiv\n",
+    "\\frac{1}{2\\pi}\n",
+    "\\int_0^{2\\pi}\n",
+    "d\\phi\\,\n",
+    "\\frac{dN}{d\\phi}(p_T)\n",
+    "=\n",
+    "\\frac{N(p_T)}{2\\pi}.\n",
+    "$$\n",
+    "\n",
+    "O termo $ v_0(p_T) $ representa a **contribuição isotrópica média** da distribuição angular, servindo como **normalização** sobre a qual os coeficientes $ v_n(p_T) $, com $ n \\ge 1 $, quantificam as anisotropias do estado final.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f729c1a4",
    "metadata": {},
    "source": [
     "<link href=\"https://fonts.googleapis.com/...\" rel=\"stylesheet\">\n",
     "\n",
-    "<div style=\"font-family: 'Reenie Beanie', cursive;\n",
+    "<div style=\"\n",
+    "  font-family: 'Reenie Beanie', cursive;\n",
+    "  font-size: 24px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
     "\">\n",
     "\n",
     "\n",
@@ -53,9 +230,69 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c1c6d12",
+   "id": "e85eb009",
    "metadata": {},
-   "source": []
+   "source": [
+    "<link href=\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap\" rel=\"stylesheet\">\n",
+    "\n",
+    "<div style=\"\n",
+    "  font-family: 'Reenie Beanie', cursive;\n",
+    "  font-size: 22px;\n",
+    "  line-height: 1.6;\n",
+    "  color: #2c2c2c;\n",
+    "\">\n",
+    "Em fluidos relativísticos, a hidrodinâmica descreve o comportamento coletivo de sistemas\n",
+    "fortemente interagentes a partir de quantidades macroscópicas como densidade de energia,\n",
+    "pressão e velocidade do fluido. A conservação local dessas quantidades reflete,\n",
+    "de maneira efetiva, a física microscópica do sistema.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0a34dbdd",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>@import url(\"https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap\");\n",
+       "\n",
+       "/* Markdown renderizado */\n",
+       ".rendered_html {\n",
+       "    font-family: 'Reenie Beanie', cursive !important;\n",
+       "    font-size: 22px;\n",
+       "    line-height: 1.6;\n",
+       "    color: #2c2c2c;\n",
+       "}\n",
+       "\n",
+       "/* Parágrafos e listas */\n",
+       ".rendered_html p,\n",
+       ".rendered_html li {\n",
+       "    font-family: 'Reenie Beanie', cursive !important;\n",
+       "}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "css = Path(\"../../assets/css/notebook-theme.css\").read_text(encoding=\"utf-8\")\n",
+    "HTML(f\"<style>{css}</style>\")"
+   ]
   }
  ],
  "metadata": {
